--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".BookApplication"
         android:theme="@style/BookTheme.NoActionBarTheme">
         <activity android:name=".ui.activity.SplashActivity"
             android:label="@string/app_name"
