--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,4 +117,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation project(':net')
+    implementation project(':common')
 }
