--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,15 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/app_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/app_icon_round"
         android:supportsRtl="true"
         android:name=".BookApplication"
         android:theme="@style/BookTheme.NoActionBarTheme">
+        <meta-data
+            android:name="CHANNEL"
+            android:value="${CHANNEL_VALUE}" />
         <activity android:name=".mvp.ui.activity.SplashActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
@@ -27,6 +30,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".mvp.ui.activity.IndexActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:launchMode="singleTop"/>
+        <activity android:name=".mvp.ui.activity.AboutActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:launchMode="singleTop"/>
