--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,12 @@ android {
 
     }
 
+    allprojects {
+        repositories {
+            maven { url 'https://jitpack.io' }
+        }
+    }
+
     lintOptions {
         abortOnError false
         checkReleaseBuilds false
@@ -141,6 +147,17 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    /* basequickadapter */
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.2'
+    /* mzbanner */
+    implementation 'com.github.pinguo-zhouwei:MZBannerView:v2.0.2'
+    /* websocket */
+//    implementation "org.java-websocket:Java-WebSocket:1.4.0"
+    /* socketio */
+//    compile ('io.socket:socket.io-client:0.8.3') {
+//        exclude group: 'org.json', module: 'json'
+//    }
+
     implementation project(':net')
     implementation project(':common')
 }
