--- a/net/bintray.gradle
+++ b/net/bintray.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.novoda.bintray-release'
 allprojects {
     repositories {
         jcenter()
+        maven{ url'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
     }
     tasks.withType(Javadoc) {
         options {
@@ -25,7 +26,7 @@ publish {
     //compile引用时的第2部分项目名
     artifactId = 'retrofit-url-manager'
     //compile引用时的第3部分版本号
-    publishVersion = rootProject.versionName
+    publishVersion = rootProject.ext.android.versionName
     desc = 'Let Retrofit support multiple baseUrl and can be change the baseUrl at runtime.'
     website = siteUrl
 }
